#preview
add_executable(1492 1492.cpp)
add_executable(2405 2405.cpp)

##Apil
add_executable(2519 2519.cpp)
add_executable(2355 2355.cpp)
add_executable(2307 2307.cpp)

add_executable(56 56.cpp)
add_executable(200 200.cpp)
add_executable(937 937.cpp)
add_executable(1143 1143.cpp)
add_executable(1431 1431.cpp)
add_executable(1650 1650.cpp)
add_executable(1676 1676.cpp)
add_executable(2408 2408.cpp)
add_executable(2340 2340.cpp)
add_executable(2330 2330.cpp)
add_executable(2323 2323.cpp)
add_executable(2268 2268.cpp)
add_executable(2222 2222.cpp)
add_executable(2461 2461.cpp)
add_executable(2486 2486.cpp)
add_executable(2638 2638.cpp)
add_executable(2297 2297.cpp)
add_executable(2534 2534.cpp)




#stock
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(123 123.cpp)

#word
add_executable(79 79.cpp)
add_executable(212 212.cpp)

# 单调栈
add_executable(496 496.cpp)
add_executable(503 503.cpp)
add_executable(739 739.cpp)
add_executable(84 84.cpp)# 难


